ISSUE-410 Migrate somes class to Java 17